kube/api/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: social-albums-api
  namespace: social-albums
  labels:
    app: social-albums-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-albums-api
  template:
    metadata:
      labels:
        app: social-albums-api
    spec:
      containers:
      - envFrom:
          - secretRef:
              name: mysql-config-secrets
        image: angelosnm/albums-api:851dbf1-32
        name: social-albums-api
