kube/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-albums-api
  namespace: social-albums
spec:
  selector:
    app: social-albums-api
  ports:
    - targetPort: 5000
      port: 5000
  type: ClusterIP
