kube/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: social-albums-api
  namespace: social-albums
spec:
  rules:
  - host: api.social-albums.cucco.org
    http:
      paths:
      - path: /social-albums-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: social-albums-api
            port:
              number: 5000
  tls:
  - hosts:
    - api.social-albums.cucco.org
    secretName: api-social-albums-cucco-org-tls
